--- a/src/app/admin/features/channel_setting/_Dialogue/Distributor_dialog/edit-distributor/edit-distributor.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Distributor_dialog/edit-distributor/edit-distributor.component.html
@@ -13,11 +13,11 @@
                 <div class="col-12 col-md-6">
                     <input type="text" class="" id="distributor_name" formControlName="distributor_name"
                         placeholder="Enter Distributor Name" data-toggle="tooltip" data-placement="bottom">
-                    <!-- <div *ngIf="distributorForm.get('distributor_name')?.invalid && distributorForm.get('distributor_name')?.touched"
+                    <div *ngIf="distributorForm.get('distributor_name')?.invalid && distributorForm.get('distributor_name')?.touched"
                         class="error-message">
                         Distributor name is required.
-                    </div> -->
-                    <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched"
+                    </div>
+                    <!-- <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched"
                         class="error-message">
                         <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched" class="error-message">
                             <div *ngIf="distributorForm.get('distributor_email')?.hasError('required')">
@@ -30,7 +30,7 @@
                               Email must include ".in" or ".com" after letters.
                             </div>
                           </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -80,10 +80,24 @@
                 <div class="col-12 col-md-6">
                     <input type="email" class="" id="distributor_email" formControlName="distributor_email"
                         placeholder="Enter Distributor Email" data-toggle="tooltip" data-placement="bottom">
-                    <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched"
+                    <!-- <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched"
                         class="error-message">
                         Distributor email is required.
 
+                    </div> -->
+                    <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched"
+                        class="error-message">
+                        <div *ngIf="distributorForm.get('distributor_email')?.invalid && distributorForm.get('distributor_email')?.touched" class="error-message">
+                            <div *ngIf="distributorForm.get('distributor_email')?.hasError('required')">
+                              Email is required.
+                            </div>
+                            <div *ngIf="!distributorForm.get('distributor_email')?.hasError('required') && distributorForm.get('distributor_email')?.hasError('email')">
+                              Please enter a valid email format.
+                            </div>
+                            <div *ngIf="!distributorForm.get('distributor_email')?.hasError('required') && !distributorForm.get('distributor_email')?.hasError('email') && distributorForm.get('distributor_email')?.hasError('invalidEmail')">
+                              Email must include ".in" or ".com" after letters.
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
