--- a/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.html
+++ b/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.html
@@ -78,23 +78,23 @@
                         <input type="text" formControlName="customernamelast" placeholder="Enter Subscriber Last Name"
                             required [ngClass]="{ 'is-invalid': submitted && f['customernamelast'].errors }" />
 
-                        <div style="position: relative; font-size: small;"
+                        <!-- <div style="position: relative; font-size: small;"
                             *ngIf="submitted && f['customernamelast'].errors" class="invalid-feedback">
                             <div *ngIf="f['customernamelast'].errors['required']">Subscriber Last Name
                                 is required
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="input_box">
                         <label for="pass">Father Name</label>
                         <input type="text" formControlName="fathername" placeholder="Enter Father name" required
                             [ngClass]="{ 'is-invalid': submitted && f['fathername'].errors }" />
 
-                        <div style="position: relative; font-size: small;" *ngIf="submitted && f['fathername'].errors"
+                        <!-- <div style="position: relative; font-size: small;" *ngIf="submitted && f['fathername'].errors"
                             class="invalid-feedback">
                             <div *ngIf="f['fathername'].errors['required']">Father Name is required
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="input_box col-12 col-md-6 ">
                         <div class="">
@@ -142,12 +142,8 @@
                         <label for="email">Email ID</label>
                         <input type="text" formControlName="email" placeholder="Ex. example@gmail.com"
                             [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" required />
-                        <!-- <div style="position: relative; font-size: small;" *ngIf="submitted && f['email'].errors"
-                            class="invalid-feedback">
-                            <div *ngIf="f['email'].errors['required']">Email ID is required</div>
-                            <div *ngIf="f['email'].errors['email']">Please enter a valid email</div>
-                        </div> -->
-                        <div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="error-message">
+                   
+                        <!-- <div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="error-message">
                             <div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="error-message">
                                 <div *ngIf="form.get('email')?.hasError('required')">
                                     Email is required.
@@ -161,7 +157,7 @@
                                     Email must include ".in" or ".com" after letters.
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="input_box">
                         <label for="confirmPass">Form Submission Date</label>
