--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -624,9 +624,10 @@
                                     }}</a>
                             </div>
                         </div>
-                        <!-- <a (click)="startListening('/voice')">🎙️ </a> -->
-                        <a id="start-btn" style="display: none;"><i class="fas fa-microphone"></i></a>
-                        <a id="stop-btn"><i class="fas fa-microphone-slash"></i></a>
+                        <!-- <a id="start-btn" style="display: none;margin-left: 20px;color: green;"><i
+                                class="fas fa-microphone" style="font-size: 20px;"></i></a>
+                        <a id="stop-btn" style="margin-left: 20px;color: red;"><i class="fas fa-microphone-slash"
+                                style="font-size: 20px;"></i></a> -->
                     </div>
 
                     <div class="d-block">
