--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="role == 'ROLE_OPERATOR'">
-    <!-- <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
-        <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i class="fa-solid fa-reply mx-2"></i>Back
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn  bttn" (click)="goBack()"><i class="fa-solid fa-reply mx-2"></i>Back
             to Login</button>
-    </div> -->
+    </div>
     <div class="row" style="padding: 10px;">
         <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
 
@@ -251,12 +251,12 @@
     </div>
 </div>
 <div *ngIf="role == 'ROLE_SUBLCO'" class="row" style="padding: 10px;">
-
-
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn  bttn" (click)="goBack()"><i class="fa-solid fa-reply mx-2"></i>Back
+            to Login</button>
+    </div>
     <div class="row" style="padding: 10px;">
         <div *ngIf="walletshare" class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
-
-           
             <div *ngIf="walletshare" class="col-12 col-lg-6 mb-3 ">
                 <div class="card box d-flex flex-column justify-content-between p-3">
                     <div class="d-flex justify-content-around">
