--- a/src/app/admin/features/operator/operator-details/operator-details.component.html
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="opt" style="max-height: 800px;overflow: scroll;"> -->
 <div class="opt">
     <div class=" col-12 col-md-12 mb-4 display justify-content-start align-items-baseline   ">
-        
+
         <!-- style="background-color: #0c5e85;color: white;" -->
         <div class="d-flex justify-content-center mb-2" style="align-items: baseline;">
             <button class="btn btn-outline-info mx-1 bttn" mat-raised-button color="custom-select"
@@ -48,25 +48,22 @@
                     <div class="d-block justify-content-start align-item-center">
                         <div class="sub-tittle mb-3 col-md-10" style="text-align: left;font-weight: bold;">
                             {{operator?.operatorname || 'empty'}} <span
-                                style="color: rgb(1, 1, 14);font-weight: bold;">[{{operator?.operatorid}}]</span> -
+                                style="color: #000;font-weight: bold;">[{{operator?.operatorid}}]</span> -
 
-                            <span style="color: var(--oper-grid-amount);font-weight: bold;">
+                            <span style="color: #d82be7;font-weight: bold;">
                                 [<i class="fa-solid fa-indian-rupee-sign rupee "
-                                    style="font-size: 18px;color:#b00b7e"></i> {{operator?.balance}}]</span>
+                                    style="font-size: 18px;color:#195800"></i> {{operator?.balance}}]</span>
                         </div>
                         <div class="sub-tittle mb-3 col-md-10" style="text-align: left;color: rgb(26, 23, 23);">
-                            Phone: <span style="color: rgb(19, 4, 104);">{{operator?.contactnumber1 ||
+                            Phone: <span style="color: rgb(104, 4, 104);">{{operator?.contactnumber1 ||
                                 operator?.contactnumber2}}</span>
-
                         </div>
-
                     </div>
                 </mat-card-header>
 
                 <mat-card-content>
                     <div class="col-12 head " style="text-align: left;">
                         <div class="col-6 col-md-6">
-
                             <p class="text" [ngClass]="operator?.isactive === 'true' ? 'active-text' : 'deactive-text'">
                                 <span class="label">Status</span>
                                 <span class="separator1">:</span>
@@ -77,22 +74,16 @@
                                 <span class="separator">:</span>
                                 <span class="last">{{operator?.userid}}</span>
                             </p>
-
                             <p class="text">
                                 <span class="label label2">password</span>
                                 <span class="separator">:</span>
                                 <span class="last">{{operator?.password}}</span>
                             </p>
-
-
                             <p class="text" [ngClass]="operator?.isonlinepayment ? 'active-text' : 'deactive-text'">
                                 <span class="label">online payment</span>
                                 <span class="separator1">:</span>
                                 <span class="last1">{{ operator?.isonlinepayment ? 'Active' : 'Deactive' }}</span>
                             </p>
-
-
-
                         </div>
                         <div class="col-6 col-md-6">
                             <span
@@ -205,7 +196,8 @@
                                 </a>
                             </div>
                             <div class="files tooltip-container mx-2">
-                                <a (click)="onRoleBaseDashboard(operator.userid,operator.password)" class="tooltip-container">
+                                <a (click)="onRoleBaseDashboard(operator.userid,operator.password,1)"
+                                    class="tooltip-container">
                                     <i class='fa-solid fa fa-address-card-o'
                                         style="font-size:25px;color:var(--primary-color)"></i>
                                     <span class="tooltip">TO CLICK {{operator.operatorname}} ROLE</span>
